Version 1beta2 - released TODO
cmb	fixed buggy requirement check

Version 1beta1 - released 2011-09-19
cmb	initial release