@@ -91,7 +91,7 @@ No audio CAPTCHA for the visually impaired is available.</p>
 <h2><a name="license">License</a></h2>
 <p>Cryptographp_XH is licensed under
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
-<p>&copy; 2011 Christoph M. Becker</p>
+<p>&copy; 2011-2012 Christoph M. Becker</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="credits">Credits</a></h2>
