@@ -1,5 +1,9 @@
+TODO:
+    add translations
+
 Version 1beta2 - released TODO
 cmb	fixed buggy requirement check
+cmb	extended copyright to 2012
 
 Version 1beta1 - released 2011-09-19
 cmb	initial release
